# NetCDF95

./: .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  ConfigureCompilerFlags.cmake  FindNetCDF.cmake  FindNetCDF_Fortran.cmake  FindnetCDF.cmake  GNUmakefile  NetCDF95Config.cmake.in  README.md  Read_me  depend.mk  file_list  handle_err.f90  improvements.md~  index.html  inq_numgrps.c  mkdocs.yml  nc_constants.f90  netcdf95.f  netcdf95.f90  nf95_abort.f90  nf95_constants.f90  nf95_def_dim.f90  nf95_get_att.f  nf95_get_missing.f  nf95_get_missing.f90  nf95_get_var.f  nf95_get_var.f90  nf95_get_var_array.h  nf95_inq_dimid.f90  nf95_inq_grp_full_ncid.f90  nf95_inq_grpname.f90  nf95_inq_grpname_full.f90  nf95_inq_grps.f90  nf95_inq_libvers.f90  nf95_inq_libvers.f90.in  nf95_inquire_dimension.f90  nf95_strerror.f90  (+4 more)
Attributes/: CMakeLists.txt  nc_get_att_1_string.c  nf95_copy_att.f90  nf95_get_att.f90  nf95_get_att_text.f90  nf95_get_missing.f90  nf95_get_missing.h  nf95_inq_attname.f90  nf95_inquire_attribute.f90  nf95_put_att.f90  nf95_put_att.h
Compiler_options/: g95.mk  gfortran.mk  ifort.mk  pgfortran.mk  sxf90.mk  xlf95.mk
Datasets/: CMakeLists.txt  nf95_close.f90  nf95_create.f90  nf95_create_single.f90  nf95_create_snc.f90  nf95_enddef.f90  nf95_find_coord.f90  nf95_inquire.f90  nf95_open.f90  nf95_redef.f90  nf95_sync.f90
Detailed_content/: datasets.md~  groups.md~  improvements.md~  variables.html  variables.html~  variables.md~
Detailed_content/attributes/: index.html
Detailed_content/datasets/: index.html
Detailed_content/dimensions/: index.html
Detailed_content/errors/: index.html
Detailed_content/groups/: index.html
Detailed_content/improvements/: index.html
Detailed_content/variables/: index.html
Detailed_content/version/: index.html
Groups/: CMakeLists.txt  inq_numgrps.c  nc_inq_grpname_len.f90  nf95_inq_file_ncid.f90  nf95_inq_grp_full_ncid.f90  nf95_inq_grp_parent.f90  nf95_inq_grpname.f90  nf95_inq_grpname_full.f90  nf95_inq_grps.f90  test_c_char.f90
Sources/: find_coord.f  nf95_get_att.f  nf95_get_var.f  nf95_get_var_scalar.h  nf95_gw_var.f
Test/: CMakeLists.txt  GNUmakefile  test_char.f90  test_get_missing_char.f90  test_handle_err.f90  tests.json
Tests/: Agulhas.nc  CMakeLists.txt  GNUmakefile  adt.nc  aerosol_optics.nc  histhf.nc  plouf.nc  test_abort.f90  test_char.f90  test_char.nc  test_create_single.f90  test_find_coord.f90  test_get_att_text.f90  test_get_missing.f90  test_get_missing_2.f90  test_get_missing_char.f90  test_get_missing_char.nc  test_get_var_text.f90  test_gunp_var.f90  test_inq_attname.f90  test_inq_file_ncid.f90  test_inq_grp_full_ncid.f90  test_inq_grpname.f90  test_inq_grps.f90  test_inq_varnatts.f90  test_inquire_attribute.f90  test_netcdf95.f90  test_put_var_char.f90  tests.json
Variables/: CMakeLists.txt  check_start_count.f90  nf95_def_var.f90  nf95_get_var.f90  nf95_get_var_array.h  nf95_get_var_scalar.h  nf95_gunp_var.f90  nf95_inq_varid.f90  nf95_inq_varnatts.f90  nf95_inquire_variable.f90  nf95_put_var.f90
changes/: index.html
docs/: index.md  installation.md  usage.md
docs/Detailed_content/: attributes.md  datasets.md  dimensions.md  errors.md  groups.md  improvements.md  variables.md  version.md
docs/Usage/: datasets.md
installation/: index.html
search/: search_index.json
usage/: index.html
